# aimo_local

./: .gitignore  .gitmodules  AIMO Analysis Engine仕様書 v1.3.docx  AIMO_Analysis_Engine_Specification_v1.5.md  AIMO_Detail.md  AUDIT_REPORT_v1.4.md  EXECUTION_LOG_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  VALIDATION_REPORT.md  env.example  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: allowlist.yaml  box_sync.yaml  bytes_buckets.yml  cost_reduction.yaml  llm_providers.yaml  thresholds.yaml  url_normalization.yml
docs/: CHANGELOG_NATIVE_STANDARD.md  DEVELOPER_HANDOFF_NATIVE_STANDARD.md  MIGRATION_NATIVE_STANDARD.md  PLAYBOOK_AIMO_STANDARD_UPGRADE.md  STANDARD_0.1.1_CHANGE_LIST.md  STANDARD_0.1.1_CHANGE_PLAN.md  definition_of_done.md  domain_parsing.md  implementation_gap_analysis_v1.4.md  implementation_gap_analysis_v1.4_taxonomy.md  implementation_guide_taxonomy_v1.4.md  implementation_plan.md  implementation_roadmap_v1.4.md  non_goals.md  phase14_17_implementation_summary.md
docs/ADR/: ADR-0001-standard-pinning-and-run-reproducibility.md
llm/schemas/: analysis_output.schema.json
ops/: jp.riseby.aimo.plist  runbook.md
ops/launchd/: aimo.engine.plist
report/: audit_narrative_template.md  dashboard_output.schema.json  excel_template_spec.json  sanitize_spec.md
rules/: base_rules.json  genai_policy.md  rule.schema.json
sample_logs/: README.md  paloalto_sample.csv
sample_logs/bluecoat/: invalid_01.csv  normal_01.csv
sample_logs/ifilter/: invalid_01.csv  normal_01.csv
sample_logs/mdca/: invalid_01.csv  normal_01.csv
sample_logs/netskope/: invalid_01.csv  normal.csv
sample_logs/paloalto/: invalid_01.csv
sample_logs/skyhigh/: invalid_01.csv  normal_01.csv
sample_logs/umbrella/: invalid_01.csv  normal_01.csv
sample_logs/zscaler/: abnormal.csv  normal.csv
schemas/: canonical_event.schema.json  canonical_signature.schema.json  report_summary.schema.json
schemas/vendors/bluecoat/: mapping.yaml
schemas/vendors/ifilter/: mapping.yaml
schemas/vendors/mdca/: mapping.yaml
schemas/vendors/netskope/: mapping.yaml
schemas/vendors/paloalto/: mapping.yaml
schemas/vendors/skyhigh/: mapping.yaml
schemas/vendors/umbrella/: mapping.yaml
schemas/vendors/zscaler/: mapping.yaml
scripts/: sync_aimo_standard.py  upgrade_standard_version.sh
src/: __init__.py  locking.md  main.py  orchestrator.py
src/classifiers/: __init__.py  rule_classifier.py  stub_classifier.py
src/cli/: __init__.py  __main__.py
src/db/: __init__.py  compat.py  duckdb_client.py  migrations.py  schema.sql
src/detectors/: __init__.py  abc_detector.py
src/ingestor/: __init__.py  base.py  parquet_writer.py
src/llm/: batching.md  budget.py  client.py  error_policy.md  prompt_templates.py
src/normalize/: __init__.py  url_normalizer.py
src/orchestrator/: __init__.py  file_stabilizer.py  jsonl_logger.py  metrics.py
src/reporting/: __init__.py  evidence_pack_generator.py  excel_writer.py  report_builder.py  sanitized_export.py  standard_evidence_bundle_generator.py
src/signatures/: __init__.py  signature_builder.py
src/standard_adapter/: __init__.py  constants.py  pinning.py  resolver.py  schemas.py  taxonomy.py  validator_runner.py
src/utils/: __init__.py  git_version.py  json_canonical.py
tests/: README_TESTS.md  conftest.py  regression_policy.md  test_abc_detector.py  test_budget_priority.py  test_cases.md  test_cli_smoke.py  test_contract_e2e_standard_bundle.py  test_db_compat.py  test_e2e_metrics.py  test_e2e_report_integrity.py  test_e2e_validation.py  test_evidence_bundle_generation.py  test_evidence_bundle_validator_pass.py  test_excel_writer.py  test_fallback_code_resolution.py  test_file_stabilizer.py  test_gemini_schema_sanitizer.py  test_human_verified_protection.py  test_idempotency.py  test_input_manifest_hash.py  test_integrity.py  test_jsonl_logger.py  test_llm_coverage_audit.py  test_llm_coverage_counts.py  test_llm_gemini_schema_validation.py  test_llm_rate_limit_policy.py  test_llm_schema_validation.py  test_orchestrator_checkpoint.py  test_parquet_writer.py  test_performance_metrics.py  test_phase14_exclusion_counts.py  test_phase15_monthly_aggregation.py  test_phase16_performance_metrics.py  test_phase17_jsonl_logging.py  test_provider_default_is_gemini.py  test_report_contains_audit_fields.py  test_rule_classifier.py  test_rule_classifier_taxonomy.py  test_sanitized_export.py  (+5 more)
