[project]
name = "aimo-analysis-engine"
version = "1.0.0"
description = "AIMO Analysis Engine - GenAI usage analysis from firewall logs"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Ignore rules that conflict with existing codebase
# These can be gradually enabled as the codebase is cleaned up
ignore = [
    "F541",  # f-string without placeholders (many in existing code)
    "F401",  # imported but unused (many in existing code)
    "F841",  # local variable assigned but never used
    "E402",  # module level import not at top of file
    "E722",  # bare except (many in existing code)
]

[tool.ruff.lint.per-file-ignores]
# Scripts may have different patterns
"scripts/*" = ["F541"]
# Tests may import for side effects
"tests/*" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
