[project]
name = "aimo-analysis-engine"
version = "1.0.0"
description = "AIMO Analysis Engine - GenAI usage analysis from firewall logs"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}
dependencies = [
    "duckdb>=1.4.4",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pyyaml>=6.0.3",
    "jsonschema>=4.26.0",
    "requests>=2.32.5",
    "xlsxwriter>=3.2.9",
    "python-dateutil>=2.9.0.post0",
    "tldextract>=5.3.1",
    "openpyxl>=3.1.5",
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
    "psutil>=7.2.2",
    "rapidfuzz>=3.14.3",
    "filelock>=3.20.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Ignore rules that conflict with existing codebase
# These can be gradually enabled as the codebase is cleaned up
ignore = [
    "F541",  # f-string without placeholders (many in existing code)
    "F401",  # imported but unused (many in existing code)
    "F841",  # local variable assigned but never used
    "E402",  # module level import not at top of file
    "E722",  # bare except (many in existing code)
    "E712",  # comparison to True/False (used in tests for clarity)
    "F811",  # redefinition of unused variable (fixtures in tests)
]

[tool.ruff.lint.per-file-ignores]
# Scripts may have different patterns
"scripts/*" = ["F541"]
# Tests may import for side effects and use pytest fixtures
"tests/*" = ["F401", "E712", "F811"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.rye]
dev-dependencies = [
    "pytest>=9.0.2",
]
